--- a/src/app/(auth)/login/page.module.css
+++ b/src/app/(auth)/login/page.module.css
@@ -1,6 +1,7 @@
 .page {
   display: flex;
-  min-height: 100vh;
+  height: 100%;
+  overflow-y: auto;
   align-items: center;
   justify-content: center;
 }
